@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] Disable links if the underlying preferences are locked.
 * [jan] Fix setting excluded addresses and mailing list flag in Sieve vacation rule.
  </notes>
  <contents>
@@ -1302,6 +1303,7 @@
    <date>2013-06-12</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] Disable links if the underlying preferences are locked.
 * [jan] Fix setting excluded addresses and mailing list flag in Sieve vacation rule.
    </notes>
   </release>
