@@ -2,6 +2,7 @@
 v3.1.2-git
 ----------
 
+[mms] Disable links if the underlying preferences are locked.
 [jan] Fix setting excluded addresses and mailing list flag in Sieve vacation
       rule.
 
